--- a/love.html
+++ b/love.html
@@ -489,7 +489,7 @@
           при наведении указателя мыши на эту область -->
           <div class="content__image-cover">
             <!-- текст подписи к иллюстрации -->
-            <p class="content__image-name">Женя и Ася</p>
+            <p class="content__image-name">Женя и Ася<br>Глеб, с днём рождения! Живи в кайф, расти большой, не будь лапшой!🤪</p>
           </div>
           <!-- конец области "покрывала" -->
         </div>
