--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           при наведении указателя мыши на эту область -->
           <div class="content__image-cover">
             <!-- текст подписи к иллюстрации -->
-            <p class="content__image-name">А наша поездка в Черногорию – просто мечта. Кстати, это одна из мих любимых фотографий нас💛</p>
+            <p class="content__image-name">А наш отдых в Черногории – просто мечта. Кстати, это одна из моих любимых фотографий нас💛</p>
           </div>
           <!-- конец области "покрывала" -->
         </div>
@@ -341,7 +341,7 @@
           при наведении указателя мыши на эту область -->
           <div class="content__image-cover">
             <!-- текст подписи к иллюстрации -->
-            <p class="content__image-name">Проводи свое время с удовольствием и с пользой!</p>
+            <p class="content__image-name">Проводи свое время с удовольствием и пользой!</p>
           </div>
           <!-- конец области "покрывала" -->
         </div>
@@ -477,7 +477,7 @@
           при наведении указателя мыши на эту область -->
           <div class="content__image-cover">
             <!-- текст подписи к иллюстрации -->
-            <p class="content__image-name">Ольга Павловна<br>Глебушка, поздравляю с чудесным днем – днем твоего рождения! Желаю тебе большой удачи и чтобы все твои мычты сбывались! Здоровья и мира. Ты очень теплый человек. Радости тебе и счастья в жизни.</p>
+            <p class="content__image-name">Ольга Павловна<br>Глебушка, поздравляю с чудесным днем – днем твоего рождения! Желаю тебе большой удачи и чтобы все твои мечты сбывались! Здоровья и мира. Ты очень теплый человек. Радости тебе и счастья в жизни.</p>
           </div>
           <!-- конец области "покрывала" -->
         </div>
