--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
           при наведении указателя мыши на эту область -->
           <div class="content__image-cover">
             <!-- текст подписи к иллюстрации -->
-            <p class="content__image-name">Бабушка Валя<br></p>
+            <p class="content__image-name">Бабушка Валя<br>Дорогой любимый мой Глебушка!<br>Ты стал уже взрослым, прекрасные черты ты воплотил в себе — веселый, энергичный и умелый.<br>Средь слабых — добрый, средь сильных — смелый.<br>Мы так хотим, чтоб жизнь твоя была здоровой, доброй, чистой, светлой<br>И чтобы отличался ты всегда удачей, счастьем и успехом.<br>Крепко тебя любящая Бабушка Валя</p>
           </div>
           <!-- конец области "покрывала" -->
         </div>
