--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
           при наведении указателя мыши на эту область -->
           <div class="content__image-cover">
             <!-- текст подписи к иллюстрации -->
-            <p class="content__image-name">Жора<br></p>
+            <p class="content__image-name">Жора<br>Так, тебе уже 23 годика, можно сказать уже совсем «взрослый» мальчик ☺️<br>Переставай летать в розовых облаках и побыстрее взрослей) А так, чтоб у тебя почаще открывалось твоё второе дыхание когда тебе что-то реально нужно сделать.<br>Чтоб тебя окружали только хорошие и искренние люди😘</p>
           </div>
           <!-- конец области "покрывала" -->
         </div>
